[package]
name = "dvs-fast-corners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aedat = "1.3.1"
clap = {version ="4.2.1", features = ["derive"]}
ndarray = "0.15.6"
image = "0.24.6"
show-image = "0.13.1"

