[package]
name = "dvs-fast-corners"
version = "0.1.0"
edition = "2021"


[features]
default = ["feature-logging"]
feature-logging = ["dep:chrono", "dep:serde", "dep:serde_bytes", "dep:serde_json", "dep:serde-pickle"]

[dependencies]
aedat = "1.3.3"
chrono = { version = "0.4.31", optional = true }
clap = {version ="4.2.1", features = ["derive"]}
ndarray = "0.15.6"
image = "0.24.6"
serde = { version = "1.0.140", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.6", optional = true }
serde_json = { version = "1.0", optional = true }
serde-pickle = { version = "1.0", optional = true }
show-image = {version = "0.13.1", features = ["image"]}

[profile.release]
lto = true
opt-level = 3
